# promozone-tech-challenge

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  api.py  cli.py  pipeline.py
app/collectors/: base.py  mercadolivre.py  parsing.py  selectors.py
app/core/: config.py  logging.py
app/models/: api.py  product.py
app/services/: bigquery.py
sql/: analysis.sql  current_promotions.sql  merge.sql  promotions.sql  validation_last24h.sql
tests/: conftest.py  test_api.py  test_bigquery_schema.py  test_collector.py  test_config.py  test_parsing.py  test_pipeline.py  test_product.py
tests/fixtures/: ofertas_sample.html
