[project]
name = "promozone-coletor-promo"
version = "1.0.0"
description = "Coletor de promoções do Mercado Livre → BigQuery (desafio Promozone)"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # comprimento de linha tratado pelo formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore:The 'strip_cdata' option:DeprecationWarning",
]
